--- a/rest_manager/main.css
+++ b/rest_manager/main.css
@@ -43,6 +43,10 @@ body{
     background: #ecf0f1;
 }
 
+#menu-head:hover{
+    color:black;
+}
+
 /* items */
 
 
@@ -53,17 +57,16 @@ body{
 
 .items > div{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-auto-rows: 100px;
+    grid-template-columns: repeat(4,150px);
+    grid-auto-rows: 120px;
     grid-gap: 20px;    
     margin:20px;
 }
 
 .items > div > div {
     text-align: center;
-    
     width: 1fr;
-    padding: 30px;
+    padding: 20px;
     background: #ecf0f1;
 }
 
