--- a/rest_manager/main.css
+++ b/rest_manager/main.css
@@ -126,6 +126,12 @@ body{
     padding: 10px;
     box-shadow: inset 0px 0px 0px 1px black;
     background: #ecf0f1;
+    display: flex;
+    flex-direction: row;
 }
 
+.bill-total > div > div > div{
+    flex:1;
+    text-align: right;
+}
 
