--- a/algo/sort/main.css
+++ b/algo/sort/main.css
@@ -1,15 +1,17 @@
 body{
     background-image: linear-gradient(to right, #F00000, #DC281E);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding:10%;
+    padding:5%;
 }
 
 .navbar{
     display: flex;
     flex-direction: row;
 }
-.navbar > div{
-    flex:1
+.navbar > div, .navbar > button{
+    flex:1;
+    margin:10px;
+    font-weight: bold;
 }
 
 #array{
